# icp-openmp-kdtree

./: CMakeLists.txt  README.md
data/: cloud0.pcd  cloud1.pcd
include/: icp.h
src/: icp.cpp  main.cpp
